@@ -1,3 +1,33 @@
+% Generated by roxygen2 (4.0.2): do not edit by hand
+\name{descMerger}
+\alias{descMerger}
+\title{Prepares a matrix for htmlTable from a list}
+\usage{
+descMerger(tlist, ...)
+}
+\arguments{
+  \item{tlist}{A list where each element comes from
+  \code{\link{getDescriptionStatsBy}}. You can also provide
+  pure output from the \code{\link{getDescriptionStatsBy}}
+  function and have the function merge this together with
+  the \code{...} argument. \emph{Note} that all elements
+  myst have the same \code{by} argument or you will not be
+  able to merge it into a list.}
+
+  \item{...}{Additional lists/mtrx to be merged with the
+  \code{tlist}}
+}
+\value{
+\code{matrix} Returns a matrix object of class descList
+}
+\description{
+By putting all the output from the
+\code{\link{getDescriptionStatsBy}} into a list, naming
+each element that we want in an rgroup we can automatically
+merge everything and create an object ready for the
+htmlTable.
+}
+\examples{
 data(mtcars)
 
 label(mtcars$mpg) <- "Gas"
@@ -61,4 +91,6 @@ mtcars$col_with_missing <- mtcars$col
 mtcars$col_with_missing[sample(1:NROW(mtcars), size=5)] <- NA
 getDescriptionStatsBy(mtcars$col_with_missing, mtcars$am, statistics=TRUE,
                       hrzl_prop = TRUE, total_col_show_perc = FALSE)
+
+}
 
